Grid algorithm optimizing